[package]
name = "reservoir-sampling"
description = "Implementations of a variety of algorithms for reservoir sampling in Rust."
keywords = ["random", "rng", "streaming"]
repository = "https://github.com/DesmondWillowbrook/rs-reservoir-sampling"
categories = ["algorithms"]
version = "0.3.2"
authors = ["Kartavya Vashishtha <kartavya0703@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "unweighted",
    "weighted"
]

unweighted = []

weighted = []

[dependencies]
rand = "^0.8.0"